<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="70dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/monday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Mon"
        android:layout_margin="7dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1">
    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14"/>

    <Button
        android:id="@+id/tuesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text = "@string/Tue"
        android:layout_margin="7dp"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent" >
    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28"/>

    <Button
        android:id="@+id/wednesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text = "@string/Wen"
        app:layout_constraintWidth_percent="0.1"
        android:layout_margin="7dp"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42"/>

    <Button
        android:id="@+id/thursday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text = "@string/Thu"
        android:layout_margin="7dp"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent" >
    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.56"/>

    <Button
        android:id="@+id/friday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text = "@string/Fri"
        android:layout_margin="7dp"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintStart_toEndOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="parent" >
    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70"/>

    <Button
        android:id="@+id/saturday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text = "@string/Sat"
        android:layout_margin="7dp"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintStart_toEndOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="parent" >
    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84"/>

    <Button
        android:id="@+id/sunday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text = "@string/Sun"
        android:layout_margin="7dp"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintStart_toEndOf="@id/guideline6"
        app:layout_constraintTop_toTopOf="parent" >
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>